--- a/META-INF/maven/org.jasig.cas/cas-server-webapp/pom.xml
+++ b/META-INF/maven/org.jasig.cas/cas-server-webapp/pom.xml
@@ -54,6 +54,11 @@
       <type>jar</type>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jasig.cas</groupId>
+      <artifactId>cas-server-support-ldap</artifactId>
+      <version>${cas.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
