--- a/WEB-INF/cas.properties
+++ b/WEB-INF/cas.properties
@@ -106,3 +106,58 @@ password.policy.warningDays=30
 
 # URL to which the user will be redirected to change the passsword.
 password.policy.url=https://password.example.edu/change
+
+#========================================
+# General properties
+#========================================
+ldap.url=ldap://directory.ldaptive.org
+
+# LDAP connection timeout in milliseconds
+ldap.connectTimeout=3000
+
+# Whether to use StartTLS (probably needed if not SSL connection)
+ldap.useStartTLS=true
+
+#========================================
+# LDAP connection pool configuration
+#========================================
+ldap.pool.minSize=3
+ldap.pool.maxSize=10
+ldap.pool.validateOnCheckout=false
+ldap.pool.validatePeriodically=true
+
+# Amount of time in milliseconds to block on pool exhausted condition
+# before giving up.
+ldap.pool.blockWaitTime=3000
+
+# Frequency of connection validation in seconds
+# Only applies if validatePeriodically=true
+ldap.pool.validatePeriod=300
+
+# Attempt to prune connections every N seconds
+ldap.pool.prunePeriod=300
+
+# Maximum amount of time an idle connection is allowed to be in
+# pool before it is liable to be removed/destroyed
+ldap.pool.idleTime=600
+
+#========================================
+# Authentication
+#========================================
+
+# Base DN of users to be authenticated
+ldap.authn.baseDn=ou=empleados,dc=northernexp,dc=com
+
+# Manager DN for authenticated searches
+ldap.authn.managerDN=uid=joel,ou=empleados,dc=northernexp,dc=com
+
+# Manager password for authenticated searches
+ldap.authn.managerPassword=nonsense
+
+# Search filter used for configurations that require searching for DNs
+#ldap.authn.searchFilter=(&(uid={user})(accountState=active))
+ldap.authn.searchFilter=(uid={user})
+
+# Search filter used for configurations that require searching for DNs
+#ldap.authn.format=uid=%s,ou=Users,dc=example,dc=org
+ldap.authn.format=%s@northernexp.com
