--- a/WEB-INF/cas.properties
+++ b/WEB-INF/cas.properties
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-server.name=http://localhost:8080
+server.name=http://localhost:8090
 server.prefix=${server.name}/cas
 # IP address or CIDR subnet allowed to access the /status URI of CAS that exposes health check information
 cas.securityContext.status.allowedSubnet=127.0.0.1
@@ -80,7 +80,7 @@ host.name=cas01.example.org
 #
 # Force a startup delay of 2 minutes.
 # service.registry.quartz.reloader.startDelay=120000
-# 
+#
 # Reload services every 2 minutes
 # service.registry.quartz.reloader.repeatInterval=120000
 
@@ -110,7 +110,8 @@ password.policy.url=https://password.example.edu/change
 #========================================
 # General properties
 #========================================
-ldap.url=ldap://directory.ldaptive.org
+# ldap.url=ldap://directory.ldaptive.org
+ldap.url=ldap://localhost:389 
 
 # LDAP connection timeout in milliseconds
 ldap.connectTimeout=3000
@@ -149,10 +150,11 @@ ldap.pool.idleTime=600
 ldap.authn.baseDn=ou=empleados,dc=northernexp,dc=com
 
 # Manager DN for authenticated searches
-ldap.authn.managerDN=uid=joel,ou=empleados,dc=northernexp,dc=com
+ldap.authn.managerDN=cn=admin,dc=northernexp,dc=com
+# ldap.authn.managerDN=uid=manager,ou=Users,dc=northernexp,dc=com
 
 # Manager password for authenticated searches
-ldap.authn.managerPassword=nonsense
+ldap.authn.managerPassword=admin
 
 # Search filter used for configurations that require searching for DNs
 #ldap.authn.searchFilter=(&(uid={user})(accountState=active))
@@ -160,4 +162,5 @@ ldap.authn.searchFilter=(uid={user})
 
 # Search filter used for configurations that require searching for DNs
 #ldap.authn.format=uid=%s,ou=Users,dc=example,dc=org
-ldap.authn.format=%s@northernexp.com
+ldap.authn.format=uid=%s,ou=empleados,dc=northernexp,dc=com
+# ldap.authn.format=%s@northernexp.com
