--- a/WEB-INF/cas.properties
+++ b/WEB-INF/cas.properties
@@ -111,13 +111,15 @@ password.policy.url=https://password.example.edu/change
 # General properties
 #========================================
 # ldap.url=ldap://directory.ldaptive.org
-ldap.url=ldap://localhost:389 
-
+ldap.url=ldap://localhost 
+ldap.trustedCert=/etc/ldap/sasl2/server.crt
 # LDAP connection timeout in milliseconds
 ldap.connectTimeout=3000
 
 # Whether to use StartTLS (probably needed if not SSL connection)
 ldap.useStartTLS=true
+
+# ldap.trustedCert=/etc/ldap/sasl2/server.crt
 
 #========================================
 # LDAP connection pool configuration
